--- a/web/package.json
+++ b/web/package.json
@@ -16,7 +16,9 @@
     "cloudinary-react": "^1.7.0",
     "graphql": "^15.5.1",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.13.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "sass": "^1.38.0",
