--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "A clone of airbnb using the MERN stack",
   "license": "MIT",
   "scripts": {
+    "test": "jest --watchAll",
     "dev": "ts-node-dev --no-notify --respawn --transpile-only src/server",
     "start": "node dist/server",
     "clean": "rm -rf dist",
@@ -22,27 +23,40 @@
     "@prisma/client": "^2.29.1",
     "apollo-server": "2.25.2",
     "bcryptjs": "2.4.3",
+    "dotenv": "^10.0.0",
     "graphql": "15.5.1",
     "graphql-middleware": "6.0.10",
     "graphql-scalars": "1.10.0",
     "graphql-shield": "7.5.0",
     "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "8.5.1",
-    "nexus": "1.1.0"
+    "nexus": "1.1.0",
+    "object-hash": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.15.0",
+    "@babel/node": "^7.14.9",
+    "@babel/preset-env": "^7.15.0",
+    "@babel/preset-flow": "^7.14.5",
     "@types/bcryptjs": "2.4.2",
+    "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "8.5.4",
     "@types/node": "12.20.16",
+    "@types/object-hash": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^4.28.4",
     "@typescript-eslint/parser": "^4.28.4",
+    "apollo-server-testing": "^2.25.2",
     "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
+    "msw": "^0.35.0",
     "prettier": "^2.3.2",
     "prisma": "^2.29.1",
+    "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "ts-node-dev": "1.1.8",
     "typescript": "4.3.5"
-  }
+  },
+  "type": "module"
 }
