--- a/web/package.json
+++ b/web/package.json
@@ -15,6 +15,7 @@
 		"react-hook-form": "^7.13.0",
 		"react-router-dom": "^5.2.0",
 		"react-scripts": "4.0.3",
+		"react-spring": "^9.2.4",
 		"react-transition-group": "^4.4.2",
 		"sass": "^1.38.0",
 		"web-vitals": "^1.0.1"
