--- a/web/package.json
+++ b/web/package.json
@@ -8,9 +8,11 @@
 		"@cloudinary/react": "^1.0.0-beta.8",
 		"@material-ui/core": "^4.12.3",
 		"cloudinary-react": "^1.7.0",
+		"date-fns": "^2.23.0",
 		"graphql": "^15.5.1",
 		"react": "^17.0.2",
 		"react-cookie": "^4.1.1",
+		"react-date-range": "^1.3.0",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.13.0",
 		"react-router-dom": "^5.2.0",
@@ -51,6 +53,7 @@
 		"@types/jest": "^26.0.15",
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
+		"@types/react-date-range": "^1.1.7",
 		"@types/react-dom": "^17.0.0",
 		"@types/react-router-dom": "^5.1.8",
 		"react-test-render": "^1.1.2",
