--- a/web/package.json
+++ b/web/package.json
@@ -49,6 +49,10 @@
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "2.2.0",
+		"@graphql-codegen/introspection": "2.1.0",
+		"@graphql-codegen/typescript": "2.2.2",
+		"@graphql-codegen/typescript-operations": "2.1.4",
+		"@graphql-codegen/typescript-react-apollo": "3.1.4",
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^12.0.0",
 		"@testing-library/user-event": "^12.1.10",
@@ -60,10 +64,6 @@
 		"@types/react-router-dom": "^5.1.8",
 		"react-test-render": "^1.1.2",
 		"ts-jest": "^27.0.5",
-		"typescript": "^4.1.2",
-		"@graphql-codegen/typescript": "2.2.2",
-		"@graphql-codegen/typescript-operations": "2.1.4",
-		"@graphql-codegen/typescript-react-apollo": "3.1.4",
-		"@graphql-codegen/introspection": "2.1.0"
+		"typescript": "^4.1.2"
 	}
 }
