--- a/server/package.json
+++ b/server/package.json
@@ -38,6 +38,7 @@
     "@babel/node": "^7.14.9",
     "@babel/preset-env": "^7.15.0",
     "@babel/preset-flow": "^7.14.5",
+    "@graphql-codegen/cli": "^2.2.0",
     "@types/bcryptjs": "2.4.2",
     "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "8.5.4",
