--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
 		"@material-ui/core": "^4.12.3",
 		"cloudinary-react": "^1.7.0",
 		"date-fns": "^2.23.0",
+		"google-map-react": "^2.1.10",
 		"graphql": "^15.5.1",
 		"react": "^17.0.2",
 		"react-cookie": "^4.1.1",
@@ -56,6 +57,7 @@
 		"@testing-library/jest-dom": "^5.11.4",
 		"@testing-library/react": "^12.0.0",
 		"@testing-library/user-event": "^12.1.10",
+		"@types/google-map-react": "^2.1.3",
 		"@types/jest": "^26.0.15",
 		"@types/node": "^12.0.0",
 		"@types/react": "^17.0.0",
