--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^2.29.1",
     "apollo-server": "2.25.2",
     "bcryptjs": "2.4.3",
+    "date-fns": "^2.24.0",
     "dotenv": "^10.0.0",
     "graphql": "15.5.1",
     "graphql-middleware": "6.0.10",
@@ -40,6 +41,7 @@
     "@babel/preset-flow": "^7.14.5",
     "@graphql-codegen/cli": "^2.2.0",
     "@types/bcryptjs": "2.4.2",
+    "@types/date-fns": "^2.6.0",
     "@types/jest": "^27.0.1",
     "@types/jsonwebtoken": "8.5.4",
     "@types/node": "12.20.16",
