--- a/web/package.json
+++ b/web/package.json
@@ -6,6 +6,7 @@
 		"@apollo/client": "^3.4.8",
 		"@cloudinary/base": "^1.0.0-beta.4",
 		"@cloudinary/react": "^1.0.0-beta.8",
+		"@googlemaps/js-api-loader": "^1.12.4",
 		"@material-ui/core": "^4.12.3",
 		"cloudinary-react": "^1.7.0",
 		"date-fns": "^2.23.0",
