--- a/web/package.json
+++ b/web/package.json
@@ -14,7 +14,7 @@
 		"graphql": "^15.5.1",
 		"react": "^17.0.2",
 		"react-cookie": "^4.1.1",
-		"react-date-range": "^1.3.0",
+		"react-date-range": "hnguyen1179/react-date-range",
 		"react-dom": "^17.0.2",
 		"react-hook-form": "^7.13.0",
 		"react-router-dom": "^5.2.0",
