--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
     "@prisma/client": "^2.29.1",
     "apollo-server": "2.25.2",
     "bcryptjs": "2.4.3",
+    "cloudinary": "^1.27.1",
     "date-fns": "^2.24.0",
     "dotenv": "^10.0.0",
     "graphql": "15.5.1",
