--- a/server/package.json
+++ b/server/package.json
@@ -24,13 +24,13 @@
   },
   "dependencies": {
     "@prisma/client": "^4.10.1",
-    "apollo-server": "2.25.2",
+    "apollo-server": "^3.11.1",
     "bcryptjs": "2.4.3",
     "cloudinary": "^1.27.1",
     "date-fns": "^2.24.0",
     "dotenv": "^10.0.0",
     "graphql": "15.5.1",
-    "graphql-middleware": "6.0.10",
+    "graphql-middleware": "^6.1.33",
     "graphql-scalars": "1.10.0",
     "graphql-shield": "7.5.0",
     "graphql-type-json": "^0.3.2",
@@ -57,12 +57,12 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
-    "msw": "^0.35.0",
+    "msw": "^1.0.1",
     "prettier": "^2.3.2",
     "prisma": "^4.10.1",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "ts-node-dev": "1.1.8",
-    "typescript": "4.3.5"
+    "typescript": "^4.9.5"
   }
 }
