--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,9 @@
     "generate:prisma": "prisma generate",
     "generate:nexus": "ts-node --transpile-only src/schema"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "prettier": {
     "semi": true,
     "singleQuote": true,
