Update start script

--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "test": "jest --watchAll",
     "dev": "ts-node-dev --no-notify --respawn --transpile-only src/server",
-    "start": "node dist/server",
+    "start": "node dist/src/server.js",
     "clean": "rm -rf dist",
     "build": "npm -s run clean && npm -s run generate && tsc",
     "generate": "npm -s run generate:prisma && npm -s run generate:nexus",
