--- a/web/package.json
+++ b/web/package.json
@@ -1,74 +1,80 @@
 {
-	"name": "airbnb_clone_client",
-	"version": "0.1.0",
-	"description": "A clone of airbnb",
-	"private": true,
-	"license": "MIT",
-	"homepage": "https://not-airbnb.netlify.app/",
-	"dependencies": {
-		"@apollo/client": "^3.4.8",
-		"@cloudinary/base": "^1.0.0-beta.4",
-		"@cloudinary/react": "^1.0.0-beta.8",
-		"@material-ui/core": "^4.12.3",
-		"cloudinary-react": "^1.7.0",
-		"date-fns": "^2.23.0",
-		"google-map-react": "^2.1.10",
-		"graphql": "^15.5.1",
-		"react": "^17.0.2",
-		"react-cookie": "^4.1.1",
-		"react-date-range": "hnguyen1179/react-date-range",
-		"react-dom": "^17.0.2",
-		"react-hook-form": "^7.13.0",
-		"react-router-dom": "^5.2.0",
-		"react-scripts": "4.0.3",
-		"react-spring": "^9.2.4",
-		"react-transition-group": "^4.4.2",
-		"sass": "^1.38.0",
-		"web-vitals": "^1.0.1"
-	},
-	"scripts": {
-		"start": "react-scripts start",
-		"build": "react-scripts build",
-		"test": "react-scripts test",
-		"eject": "react-scripts eject",
-		"codegen": "graphql-codegen --config codegen.yml"
-	},
-	"eslintConfig": {
-		"extends": [
-			"react-app",
-			"react-app/jest"
-		]
-	},
-	"browserslist": {
-		"production": [
-			">0.2%",
-			"not dead",
-			"not op_mini all"
-		],
-		"development": [
-			"last 1 chrome version",
-			"last 1 firefox version",
-			"last 1 safari version"
-		]
-	},
-	"devDependencies": {
-		"@graphql-codegen/cli": "2.2.0",
-		"@graphql-codegen/introspection": "2.1.0",
-		"@graphql-codegen/typescript": "2.2.2",
-		"@graphql-codegen/typescript-operations": "2.1.4",
-		"@graphql-codegen/typescript-react-apollo": "3.1.4",
-		"@testing-library/jest-dom": "^5.11.4",
-		"@testing-library/react": "^12.0.0",
-		"@testing-library/user-event": "^12.1.10",
-		"@types/google-map-react": "^2.1.3",
-		"@types/jest": "^26.0.15",
-		"@types/node": "^12.0.0",
-		"@types/react": "^17.0.0",
-		"@types/react-date-range": "^1.1.7",
-		"@types/react-dom": "^17.0.0",
-		"@types/react-router-dom": "^5.1.8",
-		"react-test-render": "^1.1.2",
-		"ts-jest": "^27.0.5",
-		"typescript": "^4.1.2"
-	}
+  "name": "airbnb_clone_client",
+  "version": "0.1.0",
+  "description": "A clone of airbnb",
+  "private": true,
+  "license": "MIT",
+  "homepage": "https://not-airbnb.netlify.app/",
+  "dependencies": {
+    "@apollo/client": "^3.4.8",
+    "@cloudinary/base": "^1.0.0-beta.4",
+    "@cloudinary/react": "^1.0.0-beta.8",
+    "@material-ui/core": "^4.12.3",
+    "cloudinary-react": "^1.7.0",
+    "date-fns": "^2.23.0",
+    "google-map-react": "^2.1.10",
+    "graphql": "^15.5.1",
+    "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
+    "react-date-range": "hnguyen1179/react-date-range",
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.13.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.3",
+    "react-spring": "^9.2.4",
+    "react-transition-group": "^4.4.2",
+    "sass": "^1.38.0",
+    "web-vitals": "^1.0.1"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "codegen": "graphql-codegen --config codegen.yml"
+  },
+  "eslintConfig": {
+    "rules": {
+      "indent": [
+        "error",
+        "tab"
+      ]
+    },
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "2.2.0",
+    "@graphql-codegen/introspection": "2.1.0",
+    "@graphql-codegen/typescript": "2.2.2",
+    "@graphql-codegen/typescript-operations": "2.1.4",
+    "@graphql-codegen/typescript-react-apollo": "3.1.4",
+    "@testing-library/jest-dom": "^5.11.4",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^12.1.10",
+    "@types/google-map-react": "^2.1.3",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^12.0.0",
+    "@types/react": "^17.0.0",
+    "@types/react-date-range": "^1.1.7",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.1.8",
+    "react-test-render": "^1.1.2",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.1.2"
+  }
 }
