--- a/server/package.json
+++ b/server/package.json
@@ -30,9 +30,12 @@
     "@prisma/client": "^4.10.1",
     "apollo-server": "^3.11.1",
     "bcryptjs": "2.4.3",
+    "body-parser": "^1.20.2",
     "cloudinary": "^1.27.1",
+    "cors": "^2.8.5",
     "date-fns": "^2.24.0",
     "dotenv": "^10.0.0",
+    "express": "^4.18.2",
     "graphql": "15.5.1",
     "graphql-middleware": "^6.1.33",
     "graphql-scalars": "1.10.0",
